components/processors/observek8sattributesprocessor/testdata/serviceLoadBalancerIngressEvent.json
{
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": {
        "annotations": {
            "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{\"o11y.io/audit\":\"2023-10-31\",\"o11y.io/team\":\"Infra\",\"observeinc.com/kubectl-nonce\":\"1\",\"service.beta.kubernetes.io/aws-load-balancer-backend-protocol\":\"tcp\",\"service.beta.kubernetes.io/aws-load-balancer-connection-idle-timeout\":\"3600\",\"service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled\":\"true\",\"service.bet [...]
            "o11y.io/audit": "2023-10-31",
            "o11y.io/team": "Infra",
            "observeinc.com/kubectl-nonce": "1",
            "service.beta.kubernetes.io/aws-load-balancer-backend-protocol": "tcp",
            "service.beta.kubernetes.io/aws-load-balancer-connection-idle-timeout": "3600",
            "service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled": "true",
            "service.beta.kubernetes.io/aws-load-balancer-eip-allocations": "eipalloc-0dd802b2990f719c8,eipalloc-09cbf91fee3043bdc,eipalloc-09b3a54e1c8586fe6",
            "service.beta.kubernetes.io/aws-load-balancer-healthcheck-port": "31144",
            "service.beta.kubernetes.io/aws-load-balancer-type": "nlb"
        },
        "creationTimestamp": "2024-04-26T17:38:46Z",
        "finalizers": [
            "service.kubernetes.io/load-balancer-cleanup"
        ],
        "labels": {
            "app.kubernetes.io/component": "controller",
            "app.kubernetes.io/instance": "ingress-nginx-collector",
            "app.kubernetes.io/managed-by": "Helm",
            "app.kubernetes.io/name": "ingress-nginx-collector",
            "app.kubernetes.io/part-of": "ingress-nginx-collector",
            "app.kubernetes.io/version": "1.3.1",
            "helm.sh/chart": "ingress-nginx-4.2.5",
            "observeinc.com/app": "ingress-nginx-collector",
            "observeinc.com/environment": "eng"
        },
        "managedFields": [
            {
                "apiVersion": "v1",
                "fieldsType": "FieldsV1",
                "fieldsV1": {
                    "f:metadata": {
                        "f:annotations": {
                            ".": {},
                            "f:kubectl.kubernetes.io/last-applied-configuration": {},
                            "f:o11y.io/audit": {},
                            "f:o11y.io/team": {},
                            "f:observeinc.com/kubectl-nonce": {},
                            "f:service.beta.kubernetes.io/aws-load-balancer-backend-protocol": {},
                            "f:service.beta.kubernetes.io/aws-load-balancer-connection-idle-timeout": {},
                            "f:service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled": {},
                            "f:service.beta.kubernetes.io/aws-load-balancer-eip-allocations": {},
                            "f:service.beta.kubernetes.io/aws-load-balancer-healthcheck-port": {},
                            "f:service.beta.kubernetes.io/aws-load-balancer-type": {}
                        },
                        "f:labels": {
                            ".": {},
                            "f:app.kubernetes.io/component": {},
                            "f:app.kubernetes.io/instance": {},
                            "f:app.kubernetes.io/managed-by": {},
                            "f:app.kubernetes.io/name": {},
                            "f:app.kubernetes.io/part-of": {},
                            "f:app.kubernetes.io/version": {},
                            "f:helm.sh/chart": {},
                            "f:observeinc.com/app": {},
                            "f:observeinc.com/environment": {}
                        }
                    },
                    "f:spec": {
                        "f:allocateLoadBalancerNodePorts": {},
                        "f:externalTrafficPolicy": {},
                        "f:internalTrafficPolicy": {},
                        "f:ipFamilies": {},
                        "f:ipFamilyPolicy": {},
                        "f:ports": {
                            ".": {},
                            "k:{\"port\":443,\"protocol\":\"TCP\"}": {
                                ".": {},
                                "f:appProtocol": {},
                                "f:name": {},
                                "f:port": {},
                                "f:protocol": {},
                                "f:targetPort": {}
                            },
                            "k:{\"port\":80,\"protocol\":\"TCP\"}": {
                                ".": {},
                                "f:appProtocol": {},
                                "f:name": {},
                                "f:nodePort": {},
                                "f:port": {},
                                "f:protocol": {},
                                "f:targetPort": {}
                            }
                        },
                        "f:selector": {},
                        "f:sessionAffinity": {},
                        "f:type": {}
                    }
                },
                "manager": "kubectl-client-side-apply",
                "operation": "Update",
                "time": "2024-04-26T17:38:46Z"
            },
            {
                "apiVersion": "v1",
                "fieldsType": "FieldsV1",
                "fieldsV1": {
                    "f:metadata": {
                        "f:finalizers": {
                            ".": {},
                            "v:\"service.kubernetes.io/load-balancer-cleanup\"": {}
                        }
                    },
                    "f:status": {
                        "f:loadBalancer": {
                            "f:ingress": {}
                        }
                    }
                },
                "manager": "aws-cloud-controller-manager",
                "operation": "Update",
                "subresource": "status",
                "time": "2024-04-26T17:39:08Z"
            }
        ],
        "name": "ingress-nginx-collector",
        "namespace": "kube-ingress",
        "resourceVersion": "739862",
        "uid": "116d7794-d20c-4505-bda5-e722cdb326fc"
    },
    "spec": {
        "allocateLoadBalancerNodePorts": true,
        "clusterIP": "172.19.137.140",
        "clusterIPs": [
            "172.19.137.140"
        ],
        "externalTrafficPolicy": "Local",
        "healthCheckNodePort": 30407,
        "internalTrafficPolicy": "Cluster",
        "ipFamilies": [
            "IPv4"
        ],
        "ipFamilyPolicy": "SingleStack",
        "ports": [
            {
                "appProtocol": "http",
                "name": "http",
                "nodePort": 31144,
                "port": 80,
                "protocol": "TCP",
                "targetPort": "http"
            },
            {
                "appProtocol": "https",
                "name": "https",
                "nodePort": 30860,
                "port": 443,
                "protocol": "TCP",
                "targetPort": "https"
            }
        ],
        "selector": {
            "app.kubernetes.io/component": "controller",
            "app.kubernetes.io/instance": "ingress-nginx-collector",
            "app.kubernetes.io/name": "ingress-nginx-collector",
            "observeinc.com/app": "ingress-nginx-collector",
            "observeinc.com/environment": "eng"
        },
        "sessionAffinity": "None",
        "type": "LoadBalancer"
    },
    "status": {
        "loadBalancer": {
            "ingress": [
                {
                    "hostname": "someLoadBalancerIdentifier.elb.us-west-2.amazonaws.com"
                }
            ]
        }
    }
}
